# ur-rs

./: Cargo.toml
examples/: qr.rs  sizes.rs
fuzz/: Cargo.toml  Justfile
fuzz/fuzz_targets/: bytewords_roundtrip.rs  fountain_chooser.rs  fountain_decode.rs  fountain_part_decode.rs  fountain_part_encode.rs  fountain_sampler.rs  ur_decode.rs  ur_encode.rs  ur_parse.rs
src/: lib.rs  xoshiro.rs
src/bytewords/: constants.rs  minicbor.rs  mod.rs
src/collections/: deque.rs  mod.rs  set.rs  vec.rs
src/fountain/: chooser.rs  decoder.rs  encoder.rs  mod.rs  part.rs  sampler.rs  util.rs
src/registry/: crypto_address.rs  crypto_eckey.rs  crypto_hdkey.rs  crypto_output.rs  crypto_request.rs  crypto_seed.rs  mod.rs  timestamp.rs  uuid.rs
src/ur/: mod.rs
