[workspace]
members = ["fuzz"]

[package]
name = "ur"
description = "A Rust implementation of Uniform Resources"
license = "MIT"
version = "0.3.0"
authors = ["Dominik Spicher <dominikspicher@gmail.com>"]
edition = "2021"
repository = "https://github.com/dspicher/ur-rs/"

[features]
default = ["std", "alloc"]
std = ["alloc", "minicbor/alloc"]
alloc = []

[dependencies]
crc = "3"
rand_xoshiro = "0.6"

[dependencies.arbitrary]
version = "1"
features = ["derive"]
optional = true

[dependencies.bitcoin]
version = "0.29"
optional = true

[dependencies.bitcoin_hashes]
version = "0.11"
default-features = false

[dependencies.heapless]
version = "0.8"
git = "https://github.com/japaric/heapless"
default-features = false

[dependencies.itertools]
version = "0.10"
default-features = false

[dependencies.minicbor]
version = "0.19"
features = ["derive"]

[dependencies.phf]
version = "0.11"
features = ["macros"]
default-features = false

[dependencies.uuid]
version = "1"
default-features = false

[dev-dependencies]
bitcoin = "0.29"
hex = "0.4"
qrcode = { version = "0.12", default-features = false }
